# sozu-gateway

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  PROTOCOL.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
charts/sozu-gateway/: values.yaml
charts/sozu-gateway/templates/: deployment.yaml  l4-services.yaml  metrics-service.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
crates/builder/: Cargo.toml
crates/builder/src/: gateway.rs  lib.rs
crates/builder/tests/: build.rs  gateway.rs
crates/builder/tests/snapshots/: build__happy_path_http_and_tls.snap  build__path_types_map_correctly.snap  gateway__http_route_maps_to_ir.snap
crates/controller/: Cargo.toml
crates/controller/src/: health.rs  main.rs  metrics.rs  shadow.rs  status.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/prometheus/: Cargo.toml
crates/prometheus/src/: lib.rs
crates/prometheus/tests/: render.rs
crates/prometheus/tests/snapshots/: render__golden_exposition.snap
crates/sozu-agent/: Cargo.toml
crates/sozu-agent/examples/: agent_smoke.rs  probe.rs
crates/sozu-agent/src/: lib.rs
crates/translator/: Cargo.toml
crates/translator/src/: lib.rs
crates/translator/tests/: golden.rs
crates/translator/tests/snapshots/: golden__catch_all_frontend_uses_post_position.snap  golden__cluster_connection_limit_maps_to_request.snap  golden__ir_to_requests_with_l4_tcp.snap  golden__reconcile_adds_then_removes_l4_route.snap  golden__reconcile_retarget_route_removes_before_adds.snap
docs/: E2E-RESULTS.md  features.md
docs/conformance/: gateway-http-v1.2.1-report.yaml
docs/getting-started/: installation.md
examples/: README.md
scripts/: e2e-lib.sh
